--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gulp-mocha": "^5.0.0",
     "gulp-sourcemaps": "^1.12.1",
     "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^4.0.0-alpha.1",
+    "gulp-typescript": "^3.2.4",
     "husky": "^0.14.3",
     "jsonlint": "^1.6.2",
     "lint-staged": "^6.0.1",
